# zk-quarks

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: commitments.rs  kopis_pc.rs  msm_optimization.rs  parallel_vs_sequential.rs  pcs_comparison.rs  polynomial.rs  proof_size_analysis.rs  r1cs.rs  snark_end_to_end.rs  sumcheck.rs
examples/: generate_proof.rs
research/: PAPER.md
src/: errors.rs  lib.rs
src/assistant/: mod.rs
src/commitments/: bipp.rs  hyrax_ipp.rs  mod.rs  pedersen.rs
src/dory_pc/: bls12_381_backend.rs  mod.rs
src/dory_pc/bls12_381_backend/: bls_field.rs  bls_group.rs  bls_pairing.rs  bls_poly.rs  bls_serde.rs  bls_transcript.rs
src/field/: bls12_381.rs  mod.rs
src/grand_product/: mod.rs
src/kopis_pc/: mod.rs
src/polynomial/: eq.rs  mod.rs  multilinear.rs  sparse.rs
src/r1cs/: instance.rs  mod.rs  sparse_matrix.rs  witness.rs
src/snark/: common.rs  kopis.rs  lakonia.rs  mod.rs  utils.rs  xiphos.rs
src/sparkle/: mod.rs
src/sumcheck/: mod.rs  prover.rs  transcript.rs  univariate.rs  verifier.rs
src/traits/: mod.rs  pcs.rs
src/utils/: batching.rs  mod.rs  msm.rs
src/zk/: low_weight.rs  mod.rs  zk_sumcheck.rs
tests/: dory_bls381_backend.rs
