[package]
name = "quarks-zk"
version = "0.1.1"
edition = "2021"
authors = ["ZyraV21"]
description = "Quarks: Quadruple-efficient transparent zkSNARKs - Implementation of Kopis-PC, Dory-PC, and Lakonia/Kopis/Xiphos SNARKs"
license = "MIT"
repository = "https://github.com/Zyra-V21/zk-quarks"
homepage = "https://github.com/Zyra-V21/zk-quarks"
documentation = "https://docs.rs/quarks-zk"
keywords = ["zksnark", "cryptography", "zero-knowledge", "snark", "bls12-381"]
categories = ["cryptography", "mathematics"]
readme = "README.md"
exclude = ["tasks.md", "examples/*.json", "examples/*.quark"]

[dependencies]
# Finite field arithmetic
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"

# Pairing-friendly curves (BLS12-381)
ark-bls12-381 = "0.4"

# Polynomial commitments
ark-poly = "0.4"

# Cryptographic primitives
sha3 = "0.10"
blake3 = "1.5"
blake2 = "0.10"
digest = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Performance
rayon = "1.8"

# Dory polynomial commitment (for Xiphos)
dory-pcs = { version = "0.1", features = ["parallel"], default-features = false }
tracing = "0.1"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "r1cs"
harness = false

[[bench]]
name = "polynomial"
harness = false

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "commitments"
harness = false

[[bench]]
name = "kopis_pc"
harness = false

[[bench]]
name = "snark_end_to_end"
harness = false

[[bench]]
name = "parallel_vs_sequential"
harness = false

[[bench]]
name = "msm_optimization"
harness = false

[[bench]]
name = "proof_size_analysis"
harness = false

[[bench]]
name = "pcs_comparison"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
